--- a/node-course/web-server/public/index.html
+++ b/node-course/web-server/public/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script> src="/js/app.js"</script>
+    <script src="/js/app.js"></script>
     </head>
 
 <body>
